[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/bar/hp_bar.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/gameplay/target_info/target_info.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/bar/bar_empty.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/bar/bar.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=6]

[node name="target_info" type="MarginContainer"]
margin_right = 194.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 278.0
margin_bottom = 86.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 86.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 264.0
margin_bottom = 86.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
mouse_filter = 2

[node name="hp_bar" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 250.0
margin_bottom = 54.0
rect_min_size = Vector2( 250, 25 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="hp_bar_bg" type="TextureProgress" parent="HBoxContainer/VBoxContainer/hp_bar"]
margin_right = 250.0
margin_bottom = 25.0
value = 35.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 1, 0.376471, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_right = 32
__meta__ = {
"_editor_description_": ""
}

[node name="hp_bar" type="TextureProgress" parent="HBoxContainer/VBoxContainer/hp_bar"]
margin_right = 250.0
margin_bottom = 25.0
value = 22.0
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.14902, 1, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_right = 32
__meta__ = {
"_editor_description_": ""
}

[node name="RichTextLabel" type="Label" parent="HBoxContainer/VBoxContainer/hp_bar"]
margin_top = 4.0
margin_right = 250.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 1 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HBoxContainer/VBoxContainer/hp_bar"]

[node name="unit_name" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 250.0
margin_bottom = 86.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 6 )
text = "..."
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 268.0
margin_right = 278.0
margin_bottom = 86.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="autohide_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
